edit in detector

--- a/Playground/MyClasses/detector.ipynb
+++ b/Playground/MyClasses/detector.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-25 14:52:43 - <module> - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n"
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-26 06:24:44 - <module> - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n"
      ]
     }
    ],
@@ -42,27 +42,35 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2026-01-25 14:52:43 - PONE.__init__ - Writing log to \u001b[1mlogs/graphnet_20260125-145243.log\u001b[0m\n"
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2026-01-26 06:24:45 - PONE.__init__ - Writing log to \u001b[1mlogs/graphnet_20260126-062445.log\u001b[0m\n"
      ]
     }
    ],
    "source": [
     "det = PONE(\n",
-    "    replace_with_identity=[\"charge\", \"dom_time\", \"dom_x\", \"dom_y\", \"dom_z\"]\n",
-    ")\n",
-    "# use differently"
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb5aab35",
+   "id": "d83e0b01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['charge', 'dom_time', 'dom_x', 'dom_y', 'dom_z']"
+       "{'charge': 0.8273166418075562,\n",
+       " 'dom_time': 2397.685500968567,\n",
+       " 'dom_x': -320.0,\n",
+       " 'dom_y': -315.0257738807146,\n",
+       " 'dom_z': -200.0,\n",
+       " 'string': 85.0,\n",
+       " 'pmt_number': 4.0,\n",
+       " 'dom_number': 6.0,\n",
+       " 'pmt_x': -320.0,\n",
+       " 'pmt_y': -315.1170171634244,\n",
+       " 'pmt_z': -200.13836089288583}"
       ]
      },
      "execution_count": 3,
@@ -71,12 +79,95 @@
     }
    ],
    "source": [
-    "det._replace_with_identity"
+    "det._p25"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "7fcbd962",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'charge': 1.0440170764923096,\n",
+       " 'dom_time': 3187.647372844144,\n",
+       " 'dom_x': 0.0,\n",
+       " 'dom_y': -37.89764466969427,\n",
+       " 'dom_z': 50.0,\n",
+       " 'string': 170.0,\n",
+       " 'pmt_number': 8.0,\n",
+       " 'dom_number': 11.0,\n",
+       " 'pmt_x': -0.0,\n",
+       " 'pmt_y': -37.715556456543275,\n",
+       " 'pmt_z': 49.88399701455792}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "det._p50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fb013eb6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'charge': 1.2890652418136597,\n",
+       " 'dom_time': 4310.009759047368,\n",
+       " 'dom_x': 320.0,\n",
+       " 'dom_y': 308.5125168440811,\n",
+       " 'dom_z': 300.0,\n",
+       " 'string': 256.0,\n",
+       " 'pmt_number': 12.0,\n",
+       " 'dom_number': 16.0,\n",
+       " 'pmt_x': 320.0,\n",
+       " 'pmt_y': 308.60376012679086,\n",
+       " 'pmt_z': 299.8616391071142}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "det._p75"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "d0e0fbf8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1e-12"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "det._eps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "1e3e04e9",
    "metadata": {},
    "outputs": [
@@ -86,7 +177,7 @@
        "'string'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "889b03e9",
    "metadata": {},
    "outputs": [
@@ -107,82 +198,20 @@
        "['dom_x', 'dom_y', 'dom_z']"
       ]
      },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "det.sensor_position_names"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "00a109be",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'sensor_id'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "det.sensor_index_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "6621041a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['dom_x', 'dom_y', 'dom_z']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "det.xyz"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "104e10df",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'string'"
-      ]
-     },
      "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "det.string_id_column"
+    "det.sensor_position_names\n",
+    "# is this used somewhere? maybe I should use pmt positions."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "46b13626",
+   "id": "00a109be",
    "metadata": {},
    "outputs": [
     {
@@ -197,13 +226,123 @@
     }
    ],
    "source": [
+    "det.sensor_index_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6621041a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['dom_x', 'dom_y', 'dom_z']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "det.xyz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "104e10df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'string'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "det.string_id_column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "46b13626",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sensor_id'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "det.sensor_id_column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "3ab31bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "det._replace_with_identity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3d8df5b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# usage\n",
+    "# x_std = det(input_features, input_feature_names) # here, scaling is applied (forward runs _standardize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eee716bb",
+   "metadata": {},
+   "source": [
+    "### What does it expect?\n",
+    "\n",
+    "- **`input_features`**: a tensor with shape **`[N, F]`**  \n",
+    "  - **N** = number of nodes  \n",
+    "  - **F** = number of features\n",
+    "\n",
+    "- **`input_feature_names`**: a list of length **`F`** (the feature names)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c62293f0",
+   "metadata": {},
+   "source": [
+    "> **Note:** The entries in `input_feature_names` must match the keys in `feature_map()` **exactly**.  \n",
+    "> Otherwise, you will get a `KeyError`.\n",
+    "\n",
+    "> **Order matters:** `input_feature_names` defines which feature each column in `input_features` corresponds to.  \n",
+    "> The detector applies the transform **column-by-column** using this list, so column `i` in `input_features` is interpreted as `input_feature_names[i]`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff21c918",
    "metadata": {},
    "outputs": [],
    "source": []
