--- a/DataPreperation/preperation_for_the_robust_scaler.ipynb
+++ b/DataPreperation/preperation_for_the_robust_scaler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "fc860009",
    "metadata": {},
    "outputs": [],
@@ -15,100 +15,237 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "dd0a6fe3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "OUTDIR = \"/project/def-nahee/kbas/POM_Response_Parquet\"\n",
-    "TRAIN_DIR = Path(OUTDIR) / \"merged\" / \"train\""
+    "TRAIN_FEATURE_DIR = Path(OUTDIR) / \"merged\" / \"train\" / \"features\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b9c471b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PosixPath('/project/def-nahee/kbas/POM_Response_Parquet/merged/train/features')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TRAIN_FEATURE_DIR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0767d018",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_3030621/396948655.py:9: DeprecationWarning: the `streaming` parameter was deprecated in 1.25.0; use `engine` instead.\n",
+      "  q25_df = lf.select([pl.col(c).quantile(0.25).alias(c) for c in num_cols]).collect(streaming=True)\n",
+      "/tmp/ipykernel_3030621/396948655.py:10: DeprecationWarning: the `streaming` parameter was deprecated in 1.25.0; use `engine` instead.\n",
+      "  q50_df = lf.select([pl.col(c).quantile(0.50).alias(c) for c in num_cols]).collect(streaming=True)\n",
+      "/tmp/ipykernel_3030621/396948655.py:11: DeprecationWarning: the `streaming` parameter was deprecated in 1.25.0; use `engine` instead.\n",
+      "  q75_df = lf.select([pl.col(c).quantile(0.75).alias(c) for c in num_cols]).collect(streaming=True)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>feature</th>\n",
+       "      <th>p25</th>\n",
+       "      <th>p50</th>\n",
+       "      <th>p75</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>charge</td>\n",
+       "      <td>0.827317</td>\n",
+       "      <td>1.044017e+00</td>\n",
+       "      <td>1.289065</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>dom_time</td>\n",
+       "      <td>2397.685501</td>\n",
+       "      <td>3.187647e+03</td>\n",
+       "      <td>4310.009759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>dom_x</td>\n",
+       "      <td>-320.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>320.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>dom_y</td>\n",
+       "      <td>-315.025774</td>\n",
+       "      <td>-3.789764e+01</td>\n",
+       "      <td>308.512517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dom_z</td>\n",
+       "      <td>-200.000000</td>\n",
+       "      <td>5.000000e+01</td>\n",
+       "      <td>300.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>string</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>1.700000e+02</td>\n",
+       "      <td>256.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>pmt_number</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>8.000000e+00</td>\n",
+       "      <td>12.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>dom_number</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>1.100000e+01</td>\n",
+       "      <td>16.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>pmt_x</td>\n",
+       "      <td>-320.000000</td>\n",
+       "      <td>-2.130940e-17</td>\n",
+       "      <td>320.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>pmt_y</td>\n",
+       "      <td>-315.117017</td>\n",
+       "      <td>-3.771556e+01</td>\n",
+       "      <td>308.603760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>pmt_z</td>\n",
+       "      <td>-200.138361</td>\n",
+       "      <td>4.988400e+01</td>\n",
+       "      <td>299.861639</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       feature          p25           p50          p75\n",
+       "0       charge     0.827317  1.044017e+00     1.289065\n",
+       "1     dom_time  2397.685501  3.187647e+03  4310.009759\n",
+       "2        dom_x  -320.000000  0.000000e+00   320.000000\n",
+       "3        dom_y  -315.025774 -3.789764e+01   308.512517\n",
+       "4        dom_z  -200.000000  5.000000e+01   300.000000\n",
+       "5       string    85.000000  1.700000e+02   256.000000\n",
+       "6   pmt_number     4.000000  8.000000e+00    12.000000\n",
+       "7   dom_number     6.000000  1.100000e+01    16.000000\n",
+       "8        pmt_x  -320.000000 -2.130940e-17   320.000000\n",
+       "9        pmt_y  -315.117017 -3.771556e+01   308.603760\n",
+       "10       pmt_z  -200.138361  4.988400e+01   299.861639"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pattern = str(TRAIN_FEATURE_DIR / \"features_*.parquet\")\n",
+    "lf = pl.scan_parquet(pattern)\n",
+    "\n",
+    "schema = lf.collect_schema()\n",
+    "num_cols = [c for c, t in schema.items() if t.is_numeric()]\n",
+    "exclude = {\"event_no\", \"global_event_no\"}\n",
+    "num_cols = [c for c in num_cols if c not in exclude]\n",
+    "\n",
+    "q25_df = lf.select([pl.col(c).quantile(0.25).alias(c) for c in num_cols]).collect(streaming=True)\n",
+    "q50_df = lf.select([pl.col(c).quantile(0.50).alias(c) for c in num_cols]).collect(streaming=True)\n",
+    "q75_df = lf.select([pl.col(c).quantile(0.75).alias(c) for c in num_cols]).collect(streaming=True)\n",
+    "\n",
+    "quantiles = pd.DataFrame({\n",
+    "    \"feature\": num_cols,\n",
+    "    \"p25\": [q25_df[c][0] for c in num_cols],\n",
+    "    \"p50\": [q50_df[c][0] for c in num_cols],\n",
+    "    \"p75\": [q75_df[c][0] for c in num_cols],\n",
+    "})\n",
+    "quantiles\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4477fcb8",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/project/def-nahee/kbas/POM_Response_Parquet/merged/train'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m tables \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(\u001b[43m[\u001b[49m\u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mfor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mTRAIN_DIR\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miterdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mif\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mis_dir\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m)\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtables in train:\u001b[39m\u001b[38;5;124m\"\u001b[39m, tables)\n",
-      "File \u001b[0;32m/usr/lib/python3.12/pathlib.py:1058\u001b[0m, in \u001b[0;36mPath.iterdir\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1052\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21miterdir\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m   1053\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Yield path objects of the directory contents.\u001b[39;00m\n\u001b[1;32m   1054\u001b[0m \n\u001b[1;32m   1055\u001b[0m \u001b[38;5;124;03m    The children are yielded in arbitrary order, and the\u001b[39;00m\n\u001b[1;32m   1056\u001b[0m \u001b[38;5;124;03m    special entries '.' and '..' are not included.\u001b[39;00m\n\u001b[1;32m   1057\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 1058\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m name \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m)\u001b[49m:\n\u001b[1;32m   1059\u001b[0m         \u001b[38;5;28;01myield\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_make_child_relpath(name)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/project/def-nahee/kbas/POM_Response_Parquet/merged/train'"
-     ]
-    }
-   ],
-   "source": [
-    "tables = sorted([p.name for p in TRAIN_DIR.iterdir() if p.is_dir()])\n",
-    "print(\"tables in train:\", tables)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "b9f044a2",
+   "id": "e8d490a1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "feature dir: /project/def-nahee/kbas/POM_Response_Parquet/merged/train/features\n"
+      "saved: /project/def-nahee/kbas/Graphnet-Applications/MyClasses/train_feature_percentiles_p25_p50_p75.csv\n"
      ]
     }
    ],
    "source": [
-    "FEATURE_TABLE = \"features\" \n",
-    "FEATURE_DIR = TRAIN_DIR / FEATURE_TABLE\n",
-    "print(\"feature dir:\", FEATURE_DIR)"
+    "out_dir = Path(\"/project/def-nahee/kbas/Graphnet-Applications/MyClasses\")\n",
+    "out_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "csv_path = out_dir / \"train_feature_percentiles_p25_p50_p75.csv\"\n",
+    "quantiles.to_csv(csv_path, index=False, float_format=\"%.16f\")  \n",
+    "\n",
+    "print(\"saved:\", csv_path)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0767d018",
+   "id": "1a5a1060",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "lf = pl.scan_parquet(str(FEATURE_DIR / \"*.parquet\"))\n",
-    "\n",
-    "q = (\n",
-    "    lf.select([\n",
-    "        cs.numeric().quantile(0.25).suffix(\"_p25\"),\n",
-    "        cs.numeric().quantile(0.50).suffix(\"_p50\"),\n",
-    "        cs.numeric().quantile(0.75).suffix(\"_p75\"),\n",
-    "    ])\n",
-    "    .collect()\n",
-    ")\n",
-    "\n",
-    "row = q.to_dicts()[0]\n",
-    "features = sorted({k.rsplit(\"_\", 1)[0] for k in row.keys()})\n",
-    "\n",
-    "out = pd.DataFrame({\n",
-    "    \"feature\": features,\n",
-    "    \"p25\": [row[f\"{f}_p25\"] for f in features],\n",
-    "    \"p50\": [row[f\"{f}_p50\"] for f in features],\n",
-    "    \"p75\": [row[f\"{f}_p75\"] for f in features],\n",
-    "})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e8d490a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# out_path = Path(OUTDIR) / \"train_feature_percentiles.csv\"\n",
-    "# out.to_csv(out_path, index=False)\n",
-    "# print(\"saved:\", out_path)\n",
-    "# out.head()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
