some training script edits

--- a/Training/Understanding/same_as_in_article.ipynb
+++ b/Training/Understanding/same_as_in_article.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FEATURES = [\"dom_x\", \"dom_y\", \"dom_z\", \"dom_time\", \"charge\"]  # (x,y,z,t,q)"
+    "FEATURES = [\"pmt_x\", \"pmt_y\", \"pmt_z\", \"dom_time\", \"charge\"]  # (x,y,z,t,q)"
    ]
   },
   {
@@ -31,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-11 06:25:09 - has_jammy_flows_package - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n"
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-26 08:37:09 - has_jammy_flows_package - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n"
      ]
     }
    ],
@@ -46,27 +46,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0be05815-6b4b-4fbb-9bab-044d4cf21b5a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2026-01-11 06:25:12 - PONE.__init__ - Writing log to \u001b[1mlogs/graphnet_20260111-062512.log\u001b[0m\n"
-     ]
-    }
-   ],
-   "source": [
-    "det = PONE(\n",
-    "    replace_with_identity=[\"charge\", \"dom_time\", \"dom_x\", \"dom_y\", \"dom_z\"]\n",
-    ")"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3e3d99b8-e37a-4fb2-96eb-094a347a2a14",
    "metadata": {},
    "outputs": [
@@ -74,9 +62,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-11 06:25:20 - has_icecube_package - `icecube` not available. Some functionality may be missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-11 06:25:20 - has_km3net_package - `km3net` not available. Some functionality may be missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-11 06:25:20 - <module> - `graphnet.models.graphs` will be depricated soon. All functionality has been moved to `graphnet.models.data_representation`.\u001b[0m\n"
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-26 08:37:38 - has_icecube_package - `icecube` not available. Some functionality may be missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-26 08:37:39 - has_km3net_package - `km3net` not available. Some functionality may be missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[33mWARNING \u001b[0m 2026-01-26 08:37:40 - <module> - `graphnet.models.graphs` will be depricated soon. All functionality has been moved to `graphnet.models.data_representation`.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [MainProcess] \u001b[32mINFO    \u001b[0m 2026-01-26 08:37:40 - PONE.__init__ - Writing log to \u001b[1mlogs/graphnet_20260126-083740.log\u001b[0m\n"
      ]
     }
    ],
@@ -86,17 +75,16 @@
     "from graphnet.models.graphs  import  KNNGraph\n",
     "from graphnet.models.graphs.nodes  import  NodesAsPulses\n",
     "\n",
-    "FEATURES = [\"dom_x\", \"dom_y\", \"dom_z\", \"dom_time\", \"charge\"]  # (x,y,z,t,q)\n",
     "\n",
     "data_representation = KNNGraph(\n",
-    "    detector=PONE(),\n",
+    "    detector=PONE(selected_features=FEATURES),\n",
     "    node_definition=NodesAsPulses(),\n",
     "    nb_nearest_neighbours=8,\n",
     "    distance_as_edge_feature = True\n",
     ")\n",
     "\n",
     "dataset = ParquetDataset(\n",
-    "    path=\"/project/def-nahee/kbas/POM_Response_Parquet/merged\" ,\n",
+    "    path=\"/project/def-nahee/kbas/POM_Response_Parquet/merged/train_reindexed\" ,\n",
     "    pulsemaps=\"features\",\n",
     "    truth_table=\"truth\",\n",
     "    features=FEATURES,\n",
@@ -108,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bf165a79-6255-423c-926d-32c9da3d5ff3",
    "metadata": {},
    "outputs": [],
@@ -118,10 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d3236b0c-27ea-4c7a-8d52-66e83003a39b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/project/6061446/kbas/pone_offline/graphnet_env/lib/python3.10/site-packages/torch/utils/data/dataloader.py:624: UserWarning: This DataLoader will create 4 worker processes in total. Our suggested max number of worker in current system is 1, which is smaller than what this DataLoader is going to create. Please be aware that excessive worker creation might get DataLoader running slow or even freeze, lower the worker number to avoid potential slowness/freeze if necessary.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "loader = DataLoader(\n",
     "    dataset,\n",
@@ -138,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ea9ad462-c312-4bbd-a4d5-0b16c0def9e0",
    "metadata": {},
    "outputs": [
@@ -146,44 +143,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-1] \u001b[33mWARNING \u001b[0m 2026-01-11 06:25:59 - has_icecube_package - `icecube` not available. Some functionality may be missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-1] \u001b[33mWARNING \u001b[0m 2026-01-11 06:25:59 - has_km3net_package - `km3net` not available. Some functionality may be missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-1] \u001b[33mWARNING \u001b[0m 2026-01-11 06:26:03 - has_jammy_flows_package - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-2] \u001b[33mWARNING \u001b[0m 2026-01-11 06:26:04 - has_icecube_package - `icecube` not available. Some functionality may be missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-2] \u001b[33mWARNING \u001b[0m 2026-01-11 06:26:05 - has_km3net_package - `km3net` not available. Some functionality may be missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-2] \u001b[33mWARNING \u001b[0m 2026-01-11 06:26:09 - has_jammy_flows_package - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-3] \u001b[33mWARNING \u001b[0m 2026-01-11 06:26:10 - has_icecube_package - `icecube` not available. Some functionality may be missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-3] \u001b[33mWARNING \u001b[0m 2026-01-11 06:26:11 - has_km3net_package - `km3net` not available. Some functionality may be missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-3] \u001b[33mWARNING \u001b[0m 2026-01-11 06:26:14 - has_jammy_flows_package - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-4] \u001b[33mWARNING \u001b[0m 2026-01-11 06:26:16 - has_icecube_package - `icecube` not available. Some functionality may be missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-4] \u001b[33mWARNING \u001b[0m 2026-01-11 06:26:16 - has_km3net_package - `km3net` not available. Some functionality may be missing.\u001b[0m\n",
-      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-4] \u001b[33mWARNING \u001b[0m 2026-01-11 06:26:20 - has_jammy_flows_package - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n"
+      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-1] \u001b[33mWARNING \u001b[0m 2026-01-26 08:37:56 - has_icecube_package - `icecube` not available. Some functionality may be missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-1] \u001b[33mWARNING \u001b[0m 2026-01-26 08:37:56 - has_km3net_package - `km3net` not available. Some functionality may be missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-1] \u001b[33mWARNING \u001b[0m 2026-01-26 08:38:00 - has_jammy_flows_package - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-2] \u001b[33mWARNING \u001b[0m 2026-01-26 08:38:02 - has_icecube_package - `icecube` not available. Some functionality may be missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-2] \u001b[33mWARNING \u001b[0m 2026-01-26 08:38:02 - has_km3net_package - `km3net` not available. Some functionality may be missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-2] \u001b[33mWARNING \u001b[0m 2026-01-26 08:38:06 - has_jammy_flows_package - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-3] \u001b[33mWARNING \u001b[0m 2026-01-26 08:38:07 - has_icecube_package - `icecube` not available. Some functionality may be missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-3] \u001b[33mWARNING \u001b[0m 2026-01-26 08:38:08 - has_km3net_package - `km3net` not available. Some functionality may be missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-3] \u001b[33mWARNING \u001b[0m 2026-01-26 08:38:11 - has_jammy_flows_package - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-4] \u001b[33mWARNING \u001b[0m 2026-01-26 08:38:13 - has_icecube_package - `icecube` not available. Some functionality may be missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-4] \u001b[33mWARNING \u001b[0m 2026-01-26 08:38:14 - has_km3net_package - `km3net` not available. Some functionality may be missing.\u001b[0m\n",
+      "\u001b[1;34mgraphnet\u001b[0m [SpawnProcess-4] \u001b[33mWARNING \u001b[0m 2026-01-26 08:38:17 - has_jammy_flows_package - `jammy_flows` not available. Normalizing Flow functionality is missing.\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "it = iter(loader)\n"
+    "it = iter(loader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "04c70080-fc01-4423-94a2-ae0b31d34029",
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch = next(it)\n"
+    "batch = next(it)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "aea8924b-0cc8-42dc-9020-ce83223bc1c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "from graphnet.models.gnn  import  DynEdge\n",
-    "backbone = DynEdge(nb_inputs=5, nb_neighbours=8, \n",
+    "backbone = DynEdge(nb_inputs= 5, nb_neighbours=8, \n",
     "                      # features_subset \n",
     "                      # dynedge_layer_sizes \n",
     "                      # post_processing_layer_sizes \n",
@@ -192,12 +189,12 @@
     "                      add_global_variables_after_pooling = True, \n",
     "                      add_norm_layer = False, \n",
     "                      skip_readout = False                      \n",
-    "                     )"
+    "                     )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "id": "73ae9e99-c596-4f63-833e-321ee141fb2a",
    "metadata": {},
    "outputs": [],
@@ -207,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "id": "e094f77a-bfc4-4dfc-96f8-8a0f85de6239",
    "metadata": {},
    "outputs": [],
@@ -219,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "id": "e1e4c8f1-036f-456c-882e-52ce22bbfa4a",
    "metadata": {},
    "outputs": [],
@@ -243,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "id": "bf069a50-ea3f-464b-9be9-de405cefcb07",
    "metadata": {},
    "outputs": [],
@@ -254,14 +251,12 @@
     "    nb_inputs = 1\n",
     "\n",
     "    def _forward(self, x: Tensor) -> Tensor:\n",
-    "        return x[:, :1]\n",
-    "\n",
-    "   "
+    "        return x[:, :1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "ccff0873-a6c2-48c8-8aeb-27a8d92248da",
    "metadata": {},
    "outputs": [],
@@ -271,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "58b682d9-f69c-4212-ba4d-b2a9e3db9e56",
    "metadata": {},
    "outputs": [],
@@ -292,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "id": "de6017ae-c43e-4a58-b21f-cbb4a6cd47c6",
    "metadata": {},
    "outputs": [],
@@ -302,20 +297,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "id": "07287698-1f8f-48ce-b94f-873fceda9e4b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[91227.9219],\n",
-       "        [87541.8516],\n",
-       "        [88054.9922],\n",
-       "        [77645.0547]], grad_fn=<SliceBackward0>)"
+       "tensor([[ 0.9495],\n",
+       "        [ 0.2773],\n",
+       "        [ 0.1849],\n",
+       "        [23.7698]], grad_fn=<SliceBackward0>)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,17 +321,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "id": "51eeeca7-1566-4955-9ed5-2a7372a9dbd0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor(86113.4566, dtype=torch.float64, grad_fn=<AddBackward0>)"
+       "tensor(6.0255, dtype=torch.float64, grad_fn=<AddBackward0>)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
