--- a/Training/Combined_EventPulseSeries_nonoise/initiative8/result_analysis.ipynb
+++ b/Training/Combined_EventPulseSeries_nonoise/initiative8/result_analysis.ipynb
@@ -2510,23 +2510,93 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "9f2428fa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Definition of `residual_zenith` (degrees)\n",
+    "\n",
+    "`residual_zenith_degree` is defined as:\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{residual\\_zenith\\_degree}\n",
+    "=\n",
+    "\\hat{\\theta}_{\\mathrm{zenith}}^{(\\deg)}\n",
+    "-\n",
+    "\\theta_{\\mathrm{zenith,true}}^{(\\deg)}\n",
+    "$$\n",
+    "\n",
+    "In the CSV this corresponds to:\n",
+    "\n",
+    "$$\n",
+    "\\mathrm{residual\\_zenith\\_degree}\n",
+    "=\n",
+    "\\mathrm{pred\\_zenith\\_degree}\n",
+    "-\n",
+    "\\mathrm{true\\_zenith\\_degree}\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53f97335",
+   "metadata": {},
+   "source": [
+    "#### Interpreting the sign of `residual_zenith_degree`\n",
+    "\n",
+    "- `residual_zenith_degree = 0` → perfect prediction  \n",
+    "- `residual_zenith_degree > 0` → the model predicts a **larger zenith angle** than truth  \n",
+    "- `residual_zenith_degree < 0` → the model predicts a **smaller zenith angle** than truth  \n",
+    "\n",
+    "**Note:** Zenith is not periodic like azimuth, so a simple difference usually makes sense.  \n",
+    "Typical range: $\\theta_{\\deg} \\in [0,180^\\circ]$  \n",
+    "$\\Rightarrow$ residual roughly in $[-180^\\circ, 180^\\circ]$.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "651847fe",
+   "metadata": {},
+   "source": [
+    "#### Quantiles: p16, p50, p84\n",
+    "\n",
+    "To summarize the distribution of `residual_zenith_degree`:\n",
+    "\n",
+    "- **p50** = median (middle value) → can be interpreted as **bias**\n",
+    "- **p16** and **p84** = the 16th and 84th percentiles  \n",
+    "  (If residuals were Gaussian, these would roughly correspond to $\\pm 1\\sigma$ around the median.)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "118bcb3b",
+   "metadata": {},
+   "source": [
+    "#### Resolution proxy: `W`\n",
+    "\n",
+    "I define a resolution-like width using the central 68% interval:\n",
+    "\n",
+    "$W = \\frac{p84 - p16}{2}$\n",
+    "\n",
+    "Interpretation:\n",
+    "\n",
+    "- Small $W$ → tighter residual distribution → **better resolution**\n",
+    "- Large $W$ → wider residual distribution → **worse resolution**\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "ca3f1e2a",
    "metadata": {},
    "source": [
-    "## Zenith performance so far: resolution (W)\n",
+    "#### Zenith performance so far: resolution (W)\n",
     "\n",
     "So far we focused on **resolution**, summarized by  \n",
     "$W = (p84 - p16)/2$, computed from the **zenith residual** distribution  \n",
-    "$r = \\widehat{\\theta} - \\theta_\\mathrm{true}$ in each zenith bin (units: **radians**).\n",
+    "$r = \\widehat{\\theta} - \\theta_\\mathrm{true}$ in each zenith bin (units: **angles**).\n",
     "\n",
     "Resolution tells us **how wide** the error distribution is.\n",
     "\n",
@@ -2545,16 +2615,13 @@
     "\n",
     "1) **Median residual vs zenith**  \n",
     "   Plot $p50(r)$ as a function of zenith, where  \n",
-    "   $r = \\widehat{\\theta} - \\theta_\\mathrm{true}$ (radians).  \n",
+    "   $r = \\widehat{\\theta} - \\theta_\\mathrm{true}$ (angles).  \n",
     "   This is the most direct bias measure in angular space.\n",
     "\n",
     "2) **Median absolute error vs zenith**  \n",
-    "   Plot the median of the absolute error (e.g., $p50(|r|)$ in radians, or equivalently in degrees).  \n",
+    "   Plot the median of the absolute error (e.g., $p50(|r|)$ in degrees).  \n",
     "   This makes the typical angular deviation easier to interpret than signed residuals.\n",
-    "\n",
-    "3) **Signed residual distribution by zenith bin**  \n",
-    "   Compare the residual distributions across zenith bins (e.g., boxplots or violin plots).  \n",
-    "   This shows whether certain zenith regions have systematic shifts (bias) and/or heavier tails.\n"
+    "\n"
    ]
   },
   {
@@ -2564,7 +2631,7 @@
    "source": [
     "### 1) Median residual vs zenith (angular bias)\n",
     "\n",
-    "If we define the zenith residual (in radians) as  \n",
+    "If we define the zenith residual (in degrees) as  \n",
     "$r = \\widehat{\\theta} - \\theta_\\mathrm{true}$,\n",
     "\n",
     "then:\n",
@@ -2613,7 +2680,7 @@
     "\n",
     "Because the signed residual can cancel out, it is also useful to track the typical *magnitude* of the error:\n",
     "\n",
-    "- $p50(|r|)$ in **radians** (or convert to degrees for readability)\n",
+    "- $p50(|r|)$ in **degrees** \n",
     "\n",
     "Interpretation:\n",
     "- smaller values → better angular accuracy\n",
