--- a/Training/EventPulseSeries_nonoise/initiative2/result_analysis_energy_updated.ipynb
+++ b/Training/EventPulseSeries_nonoise/initiative2/result_analysis_energy_updated.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "004c0092",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "('login1', '/project/def-nahee/kbas/pone_offline/graphnet_env/bin/python')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,16 +27,14 @@
    "id": "9f366b73",
    "metadata": {},
    "source": [
-    "# Results Analysis — Energy Reconstruction (Initiative 2)\n",
-    "\n",
     "This notebook analyses **test_predictions.csv** (event-level) and **metrics.csv** (epoch-level).\n",
     "\n",
-    "## 0. Setup\n"
+    "# 0. Setup\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "1eaa2311",
    "metadata": {},
    "outputs": [],
@@ -67,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "b31088d1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +81,7 @@
    "id": "4ebfdddc",
    "metadata": {},
    "source": [
-    "## 1. Test Predictions (event-level)\n"
+    "# 1. Test Predictions (event-level)\n"
    ]
   },
   {
@@ -91,7 +89,7 @@
    "id": "f5ffecbb",
    "metadata": {},
    "source": [
-    "### 1.1 Workflow\n",
+    "## 1.1 Workflow\n",
     "a) Confirm schema and NaNs/Infs  \n",
     "b) Inspect the global residual distribution  \n",
     "c) Inspect residual vs truth (trend + spread)  \n",
@@ -104,12 +102,12 @@
    "id": "fb38d2c1",
    "metadata": {},
    "source": [
-    "### 1.2 Schema and integrity checks\n"
+    "## 1.2 Schema and integrity checks\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "34a298ab",
    "metadata": {},
    "outputs": [
@@ -129,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "8109035a",
    "metadata": {},
    "outputs": [
@@ -210,7 +208,7 @@
        "2        0.256052     102.302177      1171  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "04e63e89",
    "metadata": {},
    "outputs": [
@@ -253,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "47e51c0f",
    "metadata": {},
    "outputs": [
@@ -296,12 +294,12 @@
    "id": "09915f98",
    "metadata": {},
    "source": [
-    "### 1.3 Column ranges (min / max)\n"
+    "## 1.3 Column ranges (min / max)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "968646f5",
    "metadata": {},
    "outputs": [
@@ -337,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "97d75310",
    "metadata": {},
    "outputs": [
@@ -361,12 +359,12 @@
    "id": "37268819",
    "metadata": {},
    "source": [
-    "### 1.4 Global summary (quantiles and W)\n"
+    "## 1.4 Global summary (quantiles and W)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "76a75d62",
    "metadata": {},
    "outputs": [
@@ -392,12 +390,12 @@
    "id": "ec5c1eed",
    "metadata": {},
    "source": [
-    "### 1.5 Residual distribution\n"
+    "## 1.5 Residual distribution\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "9de98931",
    "metadata": {},
    "outputs": [
@@ -444,7 +442,7 @@
    "id": "5f0a2a15",
    "metadata": {},
    "source": [
-    "### 1.6 Residual vs truth (trend + spread)\n",
+    "## 1.6 Residual vs truth (trend + spread)\n",
     "\n",
     "This diagnostic shows how the **log10 residual** behaves across the energy range:\n",
     "\n",
@@ -462,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "f6acaff8",
    "metadata": {},
    "outputs": [
@@ -516,12 +514,12 @@
    "id": "319d0da1",
    "metadata": {},
    "source": [
-    "### 1.7 Calibration (predicted vs true)\n"
+    "## 1.7 Calibration (predicted vs true)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "23e38432",
    "metadata": {},
    "outputs": [
@@ -562,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "1aa43b3b",
    "metadata": {},
    "outputs": [
@@ -727,7 +725,7 @@
        "9  1.099902  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,12 +768,12 @@
    "id": "2e0ec098",
    "metadata": {},
    "source": [
-    "### 1.8 Resolution vs truth (W)\n"
+    "## 1.8 Resolution vs truth (W)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "id": "69b43b9c",
    "metadata": {},
    "outputs": [
@@ -818,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "id": "d21cee2e",
    "metadata": {},
    "outputs": [],
@@ -836,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "id": "043318f8",
    "metadata": {},
    "outputs": [
@@ -874,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "id": "68390661",
    "metadata": {},
    "outputs": [
@@ -922,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "id": "222ebd7d",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1085,7 @@
        "9  0.710911  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "id": "c97c571c",
    "metadata": {},
    "outputs": [
@@ -1234,10 +1232,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "974ddedc",
+   "id": "49b01a26",
    "metadata": {},
    "source": [
-    "#### Bias diagnostics: two complementary views\n",
+    "## 1.9 Bias diagnostics: two complementary views\n",
     "\n"
    ]
   },
@@ -1274,16 +1272,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "49b01a26",
-   "metadata": {},
-   "source": [
-    "### 1.9 Bias diagnostics\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "id": "d7dc0f3a",
    "metadata": {},
    "outputs": [
@@ -1334,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "id": "1b1ffcba",
    "metadata": {},
    "outputs": [
@@ -1369,7 +1359,7 @@
    "id": "b4af52e5",
    "metadata": {},
    "source": [
-    "## 2. Training Metrics (epoch-level)\n"
+    "# 2. Training Metrics (epoch-level)\n"
    ]
   },
   {
@@ -1377,12 +1367,12 @@
    "id": "6c852633",
    "metadata": {},
    "source": [
-    "### 2.1 Overview\n"
+    "## 2.1 Overview\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "id": "28e9b4b3",
    "metadata": {},
    "outputs": [
@@ -1402,7 +1392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "id": "0798a465",
    "metadata": {},
    "outputs": [
@@ -1427,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "id": "b2c70ab1",
    "metadata": {},
    "outputs": [
@@ -1569,7 +1559,7 @@
        "4     0.385248       -0.090549       0.345556        0.515086  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1583,12 +1573,12 @@
    "id": "e10d25c7",
    "metadata": {},
    "source": [
-    "### 2.2 Training curves (loss & LR)\n"
+    "## 2.2 Training curves (loss & LR)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "id": "cbafc703",
    "metadata": {},
    "outputs": [
@@ -1654,12 +1644,12 @@
    "id": "9932d6a0",
    "metadata": {},
    "source": [
-    "### 2.3 Key validation metrics over epochs\n"
+    "## 2.3 Key validation metrics over epochs\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 55,
    "id": "d0e0bd43",
    "metadata": {},
    "outputs": [
@@ -1701,12 +1691,12 @@
    "id": "602f1706",
    "metadata": {},
    "source": [
-    "### 2.4 Snapshot (best vs last epoch)\n"
+    "## 2.4 Snapshot (best vs last epoch)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 56,
    "id": "972979c7",
    "metadata": {},
    "outputs": [
@@ -1797,7 +1787,7 @@
        "1     0.333191       -0.051992       0.308839        0.472951  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
